chore: Invalidate cache with version parameter

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta name="description" content="AstroTune - Tu gestor de playlists cyberpunk con tema futurista" />
     <meta name="keywords" content="Spotify, Playlists, Música, React, Vite" />
     <meta name="author" content="DFelipeR" />
+    <meta name="version" content="1.0.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="/reset.css?v=1.0.2" />
     <title>AstroTune - Gestor de Playlists Cyberpunk</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx?v=1.0.2"></script>
   </body>
 </html>
