--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Spotify, Playlists, Música, React, Vite" />
     <meta name="author" content="DFelipeR" />
 
-    <link rel="stylesheet" href="./public/reset.css" />
+    <link rel="stylesheet" href="/reset.css" />
     <title>AstroTune - Gestor de Playlists Cyberpunk</title>
   </head>
   <body>
